fix: fill extra space with component cards

--- a/docs/app/blocks/components/components-overview-block/components-overview-block.component.scss
+++ b/docs/app/blocks/components/components-overview-block/components-overview-block.component.scss
@@ -74,6 +74,7 @@
 
   @include media-breakpoint-up(md) {
     .components-list {
+      margin: 0 -1.5rem;
 
       .component-card-wrapper {
         flex: 1 0 auto;
